--- a/sample/sections/section-02.html
+++ b/sample/sections/section-02.html
@@ -39,7 +39,7 @@
                             </tbody>
                         </table>
                         <div class="feature-image" onclick="openGallery('img-login')">
-                            <img loading="lazy" src="image/01_login.png" alt="ログイン画面" id="img-login" />
+                            <img loading="lazy" src="image/1_1.png" alt="ログイン画面" id="img-login" />
                         </div>
                     </div>
                 </section>
