--- a/webAdminSections/section-01.html
+++ b/webAdminSections/section-01.html
@@ -5,14 +5,13 @@
 
     <div id="subsection-1-1" class="manual-subsection">
         <h3>1.1 概要</h3>
-        <p>サイドバーは、プロジェクト管理からチーム管理まで、TsutaAI Web Adminの全ての機能に素早くアクセスできるように設計されています。カテゴリー別に整理されたメニュー構造により、目的の機能を直感的に見つけることができます。</p>
-        
-        <!-- <div class="feature-image" onclick="openGallery('sidebar-overview-img')">
-            <img id="sidebar-overview-img" 
-                 src="../image/web-admin/sidebar-overview.png" 
-                 alt="サイドバー全体図" 
-                 loading="lazy" />
-        </div> -->
+        <p>サイドバーは、プロジェクト管理からチーム管理まで、TsutaAI Web
+            Adminの全ての機能に素早くアクセスできるように設計されています。カテゴリー別に整理されたメニュー構造により、目的の機能を直感的に見つけることができます。</p>
+
+        <div class="feature-image" onclick="openGallery('sidebar-overview-img')">
+            <img id="sidebar-overview-img" src="../image/web-admin/01_sidebar-overview.png" alt="サイドバー全体図"
+                loading="lazy" />
+        </div>
 
         <h4>主要な機能</h4>
         <ul class="item-list">
@@ -29,10 +28,7 @@
         <p>サイドバーの最上部には、ブランドロゴと折りたたみボタンが配置されています。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-header-img')">
-            <img id="sidebar-header-img" 
-                 src="../image/web-admin/sidebar-header.png" 
-                 alt="サイドバーヘッダー" 
-                 loading="lazy" />
+            <img id="sidebar-header-img" src="../image/web-admin/01_sidebar-header.png" alt="サイドバーヘッダー" loading="lazy" />
         </div>
 
         <h4>構成要素</h4>
@@ -66,10 +62,8 @@
         <p>サイドバーのメニューは、5つのカテゴリーに分類されており、各カテゴリーには関連する機能がグループ化されています。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-categories-img')">
-            <img id="sidebar-categories-img" 
-                 src="../image/web-admin/sidebar-categories.png" 
-                 alt="カテゴリー別メニュー" 
-                 loading="lazy" />
+            <img id="sidebar-categories-img" src="../image/web-admin/01_sidebar-categories.png" alt="カテゴリー別メニュー"
+                loading="lazy" />
         </div>
 
         <h4>カテゴリー一覧</h4>
@@ -129,10 +123,8 @@
         <p>各カテゴリー内のメニューアイテムには、アイコン、ラベル、説明文が表示されます。現在表示中のページは強調表示され、一目で現在位置を把握できます。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
-            <img id="sidebar-menu-item-img" 
-                 src="../image/web-admin/sidebar-menu-item.png" 
-                 alt="メニューアイテムの詳細" 
-                 loading="lazy" />
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
         </div>
 
         <h4>メニューアイテムの構成</h4>
@@ -177,6 +169,11 @@
         <h3>1.5 全メニューアイテム一覧</h3>
         <p>サイドバーに表示される全てのメニューアイテムの詳細です。各アイテムには固有のパス、アイコン、説明が設定されています。</p>
 
+        <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item_1.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
+        </div>
+
         <h4>1. 概要・分析カテゴリー</h4>
         <table class="manual-table">
             <thead>
@@ -208,6 +205,11 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item_2.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
+        </div>
 
         <h4>2. プロジェクト管理カテゴリー</h4>
         <table class="manual-table">
@@ -247,6 +249,11 @@
             </tbody>
         </table>
 
+        <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item_3.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
+        </div>
+
         <h4>3. 進捗・タスク管理カテゴリー</h4>
         <table class="manual-table">
             <thead>
@@ -272,6 +279,11 @@
                 </tr>
             </tbody>
         </table>
+
+        <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item_4.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
+        </div>
 
         <h4>4. チーム管理カテゴリー</h4>
         <table class="manual-table">
@@ -311,6 +323,11 @@
             </tbody>
         </table>
 
+        <div class="feature-image" onclick="openGallery('sidebar-menu-item-img')">
+            <img id="sidebar-menu-item-img" src="../image/web-admin/01_sidebar-menu-item_5.png" alt="メニューアイテムの詳細"
+                loading="lazy" />
+        </div>
+
         <h4>5. システムカテゴリー</h4>
         <table class="manual-table">
             <thead>
@@ -337,10 +354,8 @@
         <p>よく使う機能に素早くアクセスするためのショートカットボタンが用意されています。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-quick-actions-img')">
-            <img id="sidebar-quick-actions-img" 
-                 src="../image/web-admin/sidebar-quick-actions.png" 
-                 alt="クイック操作" 
-                 loading="lazy" />
+            <img id="sidebar-quick-actions-img" src="../image/web-admin/01_sidebar-quick-actions.png" alt="クイック操作"
+                loading="lazy" />
         </div>
 
         <h4>現在利用可能なクイック操作</h4>
@@ -372,10 +387,8 @@
         <p>サイドバーの最下部には、現在ログイン中のユーザー情報と接続状態を表示するユーザーカードが配置されています。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-user-card-img')">
-            <img id="sidebar-user-card-img" 
-                 src="../image/web-admin/sidebar-user-card.png" 
-                 alt="ユーザーカード" 
-                 loading="lazy" />
+            <img id="sidebar-user-card-img" src="../image/web-admin/01_sidebar-user-card.png" alt="ユーザーカード"
+                loading="lazy" />
         </div>
 
         <h4>ユーザーカードの構成要素</h4>
@@ -427,10 +440,8 @@
         <p>ユーザーカード右上の通知ベルアイコンから、システム内の重要な更新や通知を確認できます。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-notifications-img')">
-            <img id="sidebar-notifications-img" 
-                 src="../image/web-admin/sidebar-notifications.png" 
-                 alt="通知パネル" 
-                 loading="lazy" />
+            <img id="sidebar-notifications-img" src="../image/web-admin/01_sidebar-notifications.png" alt="通知パネル"
+                loading="lazy" />
         </div>
 
         <h4>通知の種類</h4>
@@ -486,10 +497,8 @@
         <p>サイドバーは画面サイズに応じて自動的にレイアウトが最適化されます。デスクトップ、タブレット、モバイル端末のいずれでも快適に操作できます。</p>
 
         <div class="feature-image" onclick="openGallery('sidebar-responsive-img')">
-            <img id="sidebar-responsive-img" 
-                 src="../image/web-admin/sidebar-responsive.png" 
-                 alt="レスポンシブデザイン" 
-                 loading="lazy" />
+            <img id="sidebar-responsive-img" src="../image/web-admin/01_sidebar-responsive.png" alt="レスポンシブデザイン"
+                loading="lazy" />
         </div>
 
         <h4>画面サイズ別の挙動</h4>
